--- a/TraversalCoreProject/Views/Shared/Components/_AdminLayoutSideBarComponent/Default.cshtml
+++ b/TraversalCoreProject/Views/Shared/Components/_AdminLayoutSideBarComponent/Default.cshtml
@@ -115,7 +115,7 @@
     </li>
 
     <li class="menu-item">
-        <a href="#" class="menu-link">
+        <a href="/Admin/Role/Index" class="menu-link">
             <i class="menu-icon bi bi-shield-lock"></i>
             <div data-i18n="Analytics">Roller</div>
         </a>
